--- a/Selfuse.config
+++ b/Selfuse.config
@@ -1664,8 +1664,6 @@ CONFIG_PACKAGE_htop=y
 # CONFIG_PACKAGE_lttng-tools is not set
 # CONFIG_PACKAGE_m4 is not set
 # CONFIG_PACKAGE_make is not set
-# CONFIG_PACKAGE_meson is not set
-# CONFIG_PACKAGE_ninja is not set
 # CONFIG_PACKAGE_objdump is not set
 # CONFIG_PACKAGE_packr is not set
 # CONFIG_PACKAGE_patch is not set
@@ -4988,9 +4986,6 @@ CONFIG_POSTFIX_PCRE=y
 # end of Streaming
 
 # CONFIG_PACKAGE_UnblockNeteaseMusic is not set
-# CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
-# CONFIG_UNBLOCKNETEASEMUSIC_GO_COMPRESS_GOPROXY is not set
-CONFIG_UNBLOCKNETEASEMUSIC_GO_COMPRESS_UPX=y
 # CONFIG_PACKAGE_aliyundrive-webdav is not set
 # CONFIG_PACKAGE_ffmpeg is not set
 # CONFIG_PACKAGE_ffprobe is not set
@@ -5402,6 +5397,13 @@ CONFIG_PACKAGE_dns2socks=y
 # CONFIG_PACKAGE_ntripclient is not set
 # CONFIG_PACKAGE_ntripserver is not set
 # end of NTRIP
+
+#
+# NeteaseMusic
+#
+# CONFIG_PACKAGE_UnblockNeteaseMusic-Go is not set
+CONFIG_UnblockNeteaseMusic-Go_INCLUDE_GOPROXY=y
+# end of NeteaseMusic
 
 #
 # OLSR.org network framework
@@ -6684,8 +6686,8 @@ CONFIG_PACKAGE_dbus=y
 CONFIG_PACKAGE_docker=y
 # CONFIG_PACKAGE_docker-compose is not set
 CONFIG_PACKAGE_dockerd=y
-CONFIG_DOCKER_CGROUP_OPTIONS=y
-CONFIG_DOCKER_OPTIONAL_FEATURES=y
+# CONFIG_DOCKER_CGROUP_OPTIONS is not set
+# CONFIG_DOCKER_OPTIONAL_FEATURES is not set
 
 #
 # Network
