--- a/.github/workflows/ARMv8.yml
+++ b/.github/workflows/ARMv8.yml
@@ -192,3 +192,29 @@ jobs:
     - name: Telegram notification
       if: steps.organize.outputs.status == 'success' && !cancelled()
       run: curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ steps.tag.outputs.release_tag }}😀😀😀ARMv8编译完成啦😀😀😀" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+
+
+
+    - name: Package Armvirt as OpenWrt
+      uses: unifreq/openwrt_packit@master
+      env:
+          OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
+          PACKAGE_SOC: s905d_s905x3_s922x_vplus_beikeyun_l1pro
+          KERNEL_AUTO_LATEST:  true
+          KERNEL_VERSION_NAME: 5.4.168_5.10.88_5.15.11
+          WHOAMI: Yuan
+          
+    - name: Upload OpenWrt Firmware to Release
+      uses: ncipollo/release-action@v1
+      with:
+         tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
+         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+         allowUpdates: true
+         token: ${{ secrets.GITHUB_TOKEN }}
+         body: |
+           This is OpenWrt firmware for Armvirt 64
+           * Firmware information
+           Default IP: 10.10.10.10
+           Default username: root
+           Default password: password
+           
